--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^4.9.0",
     "json-server": "^0.15.0",
     "leaflet": "^1.5.1",
     "react": "^16.8.6",
